Remove tempfile2.txt from tracking

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 # Comment - .gitignore file should be included to the Repo, so all users get the same file
 tempfile.txt
+tempfile2.txt
 .DS_Store
 *.zip
 *.gz
